exports[`test doesn't render family members if there are none 1`] = `
<div>
  <div
    className="one-whole outlined--light outlined--top background--light-primary soft-half-ends soft-sides soft-double-sides@lap-and-up"
    onClick={[Function]}>
    <h6
      className="text-dark-secondary flush-bottom display-inline-block">
      Filter Transactions
    </h6>
    <span
      className="float-right flush-bottom h7"
      style={
        Object {
          "cursor": "pointer",
          "marginTop": "3px",
        }
      }>
      Done
    </span>
  </div>
  <div
    className="one-whole outlined--bottom outlined--light" />
  <div
    className="one-whole outlined--light outlined--bottom background--light-primary soft-half-ends soft-sides soft-double-sides">
    <h6
      className="push-top soft-half-bottom text-dark-secondary display-inline-block">
      Family Member
    </h6>
    <h6
      className="soft-half-top push-top text-dark-secondary display-inline-block">
      Choose Date Range
    </h6>
    <div
      className="grid one-whole push-top flush-left@palm">
      <div
        className="hard-left@palm grid__item one-whole one-half@palm-wide-and-up one-third@lap-and-up one-half@lap">
        <Input
          defaultValue=""
          errorText="Please enter a start date"
          id="start"
          label="Start Date (MM/YY)"
          onBlur={[Function]}
          type="text"
          validation={[Function]} />
      </div>
      <div
        className="hard-left@palm grid__item one-whole one-half@palm-wide-and-up one-third@lap-and-up one-half@lap">
        <Input
          defaultValue=""
          errorText="Please enter an end date"
          id="end"
          label="End Date (MM/YY)"
          onBlur={[Function]}
          type="text"
          validation={[Function]} />
      </div>
    </div>
  </div>
</div>
`;

exports[`test renders family members when expanded is true 1`] = `
<div>
  <div
    className="one-whole outlined--light outlined--top background--light-primary soft-half-ends soft-sides soft-double-sides@lap-and-up"
    onClick={[Function]}>
    <h6
      className="text-dark-secondary flush-bottom display-inline-block">
      Filter Transactions
    </h6>
    <span
      className="float-right flush-bottom h7"
      style={
        Object {
          "cursor": "pointer",
          "marginTop": "3px",
        }
      }>
      Done
    </span>
  </div>
  <div
    className="one-whole outlined--bottom outlined--light" />
  <div
    className="one-whole outlined--light outlined--bottom background--light-primary soft-half-ends soft-sides soft-double-sides">
    <h6
      className="push-top soft-half-bottom text-dark-secondary display-inline-block">
      Family Member
    </h6>
    <div
      className="soft-half-bottom soft-half-left"
      onClick={[Function]}
      style={
        Object {
          "cursor": "pointer",
        }
      }>
      <div
        className=" display-inline-block outlined"
        style={
          Object {
            "borderRadius": "3px",
            "borderWidth": "2px",
            "cursor": "pointer",
            "height": "15px",
            "verticalAlign": "middle",
            "width": "15px",
          }
        } />
      <div
        className="push-left round background--fill display-inline-block"
        style={
          Object {
            "backgroundImage": "url(\'http://test.com/test.jpg\')",
            "height": "35px",
            "verticalAlign": "middle",
            "width": "35px",
          }
        } />
      <h7
        className="soft-half-left">
        jim
         
        bob
      </h7>
    </div>
    <div
      className="soft-half-bottom soft-half-left"
      onClick={[Function]}
      style={
        Object {
          "cursor": "pointer",
        }
      }>
      <div
        className=" display-inline-block outlined"
        style={
          Object {
            "borderRadius": "3px",
            "borderWidth": "2px",
            "cursor": "pointer",
            "height": "15px",
            "verticalAlign": "middle",
            "width": "15px",
          }
        } />
      <div
        className="push-left round background--fill display-inline-block"
        style={
          Object {
            "backgroundImage": "url(\'http://test.com/test.jpg\')",
            "height": "35px",
            "verticalAlign": "middle",
            "width": "35px",
          }
        } />
      <h7
        className="soft-half-left">
        sally
         
        bob
      </h7>
    </div>
    <h6
      className="soft-half-top push-top text-dark-secondary display-inline-block">
      Choose Date Range
    </h6>
    <div
      className="grid one-whole push-top flush-left@palm">
      <div
        className="hard-left@palm grid__item one-whole one-half@palm-wide-and-up one-third@lap-and-up one-half@lap">
        <Input
          defaultValue=""
          errorText="Please enter a start date"
          id="start"
          label="Start Date (MM/YY)"
          onBlur={[Function]}
          type="text"
          validation={[Function]} />
      </div>
      <div
        className="hard-left@palm grid__item one-whole one-half@palm-wide-and-up one-third@lap-and-up one-half@lap">
        <Input
          defaultValue=""
          errorText="Please enter an end date"
          id="end"
          label="End Date (MM/YY)"
          onBlur={[Function]}
          type="text"
          validation={[Function]} />
      </div>
    </div>
  </div>
</div>
`;

exports[`test renders with props 1`] = `
<div>
  <div
    className="one-whole outlined--light outlined--top background--light-primary soft-half-ends soft-sides soft-double-sides@lap-and-up"
    onClick={[Function]}>
    <h6
      className="text-dark-secondary flush-bottom display-inline-block">
      Filter Transactions
    </h6>
    <span
      className="float-right flush-bottom icon-filter"
      style={
        Object {
          "cursor": "pointer",
          "marginTop": "0px",
        }
      } />
  </div>
  <div
    className="one-whole outlined--bottom outlined--light" />
</div>
`;

exports[`test works with nickname 1`] = `
<div>
  <div
    className="one-whole outlined--light outlined--top background--light-primary soft-half-ends soft-sides soft-double-sides@lap-and-up"
    onClick={[Function]}>
    <h6
      className="text-dark-secondary flush-bottom display-inline-block">
      Filter Transactions
    </h6>
    <span
      className="float-right flush-bottom h7"
      style={
        Object {
          "cursor": "pointer",
          "marginTop": "3px",
        }
      }>
      Done
    </span>
  </div>
  <div
    className="one-whole outlined--bottom outlined--light" />
  <div
    className="one-whole outlined--light outlined--bottom background--light-primary soft-half-ends soft-sides soft-double-sides">
    <h6
      className="push-top soft-half-bottom text-dark-secondary display-inline-block">
      Family Member
    </h6>
    <div
      className="soft-half-bottom soft-half-left"
      onClick={[Function]}
      style={
        Object {
          "cursor": "pointer",
        }
      }>
      <div
        className=" display-inline-block outlined"
        style={
          Object {
            "borderRadius": "3px",
            "borderWidth": "2px",
            "cursor": "pointer",
            "height": "15px",
            "verticalAlign": "middle",
            "width": "15px",
          }
        } />
      <div
        className="push-left round background--fill display-inline-block"
        style={
          Object {
            "backgroundImage": "url(\'http://test.com/test.jpg\')",
            "height": "35px",
            "verticalAlign": "middle",
            "width": "35px",
          }
        } />
      <h7
        className="soft-half-left">
        jimothy
         
        bob
      </h7>
    </div>
    <div
      className="soft-half-bottom soft-half-left"
      onClick={[Function]}
      style={
        Object {
          "cursor": "pointer",
        }
      }>
      <div
        className=" display-inline-block outlined"
        style={
          Object {
            "borderRadius": "3px",
            "borderWidth": "2px",
            "cursor": "pointer",
            "height": "15px",
            "verticalAlign": "middle",
            "width": "15px",
          }
        } />
      <div
        className="push-left round background--fill display-inline-block"
        style={
          Object {
            "backgroundImage": "url(\'http://test.com/test.jpg\')",
            "height": "35px",
            "verticalAlign": "middle",
            "width": "35px",
          }
        } />
      <h7
        className="soft-half-left">
        sally
         
        bob
      </h7>
    </div>
    <h6
      className="soft-half-top push-top text-dark-secondary display-inline-block">
      Choose Date Range
    </h6>
    <div
      className="grid one-whole push-top flush-left@palm">
      <div
        className="hard-left@palm grid__item one-whole one-half@palm-wide-and-up one-third@lap-and-up one-half@lap">
        <Input
          defaultValue=""
          errorText="Please enter a start date"
          id="start"
          label="Start Date (MM/YY)"
          onBlur={[Function]}
          type="text"
          validation={[Function]} />
      </div>
      <div
        className="hard-left@palm grid__item one-whole one-half@palm-wide-and-up one-third@lap-and-up one-half@lap">
        <Input
          defaultValue=""
          errorText="Please enter an end date"
          id="end"
          label="End Date (MM/YY)"
          onBlur={[Function]}
          type="text"
          validation={[Function]} />
      </div>
    </div>
  </div>
</div>
`;
